--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# ChromWhatsApp Environment Configuration
+# BedayaWhatsApp Environment Configuration
 # Copy this file to .env and configure as needed
 
 # Server Configuration
